--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,30 @@
-alembic==1.0.0
-aniso8601==3.0.2
+alembic==1.0.10
+aniso8601==7.0.0
 asn1crypto==0.24.0
-bcrypt==3.1.4
-cffi==1.11.5
-click==6.7
-cryptography==2.3.1
-Flask==1.0.2
+attrs==19.1.0
+bcrypt==3.1.6
+cffi==1.12.3
+Click==7.0
+cryptography==2.7
+Flask==1.0.3
 Flask-Bcrypt==0.7.1
-Flask-Migrate==2.2.1
-flask-restplus==0.11.0
+Flask-Migrate==2.5.2
+flask-restplus==0.12.1
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.0
 Flask-Testing==0.7.1
-idna==2.7
-itsdangerous==0.24
-Jinja2==2.10
-jsonschema==2.6.0
-Mako==1.0.7
-MarkupSafe==1.0
-pycparser==2.18
-PyJWT==1.6.4
-python-dateutil==2.7.3
-python-editor==1.0.3
-pytz==2018.5
-six==1.11.0
-SQLAlchemy==1.2.11
-Werkzeug==0.14.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsonschema==3.0.1
+Mako==1.0.12
+MarkupSafe==1.1.1
+pycparser==2.19
+PyJWT==1.7.1
+pyrsistent==0.15.2
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2019.1
+six==1.12.0
+SQLAlchemy==1.3.5
+Werkzeug==0.15.4
